--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -150,8 +150,8 @@
     <div id="sequence-container">
       <div id="sequence-selector-container">
         <label for="sequence-selector">Sequence:</label>
-        <form id="sequence-form" action="/api/select_sequence" method="POST">
-          <select id="sequence-selector" name="sequence" onchange="submitForm()" disabled></select>
+        <form id="sequence-form">
+          <select id="sequence-selector" name="sequence" disabled></select>
         </form>
       </div>
     </div>
@@ -166,6 +166,7 @@
         fetch("/api/sequences")
           .then((response) => response.json())
           .then((data) => {
+            data.unshift("Select Sequence")
             const selector = document.getElementById("sequence-selector");
             selector.innerHTML = ""; // Clear previous options
             data.forEach((sequence) => {
@@ -178,14 +179,35 @@
           .catch((error) => console.error("Error fetching sequences:", error));
       }
 
-      function submitForm() {
-        document.getElementById("sequence-form").submit();
-      }
+      // function submitForm() {
+      //   seq = document.getElementById("sequence-selector").value
+      //   fetch('/api/select_sequence', {method: "POST", body: JSON.stringify({"sequence": seq})})
+      // }
 
       function sendRequest(button, action) {
         button.classList.add("sending");
         button.innerText = "Sending...";
 
+        if (action == "play") {
+          fetch(`/api/${action}`, { method: "POST", body: JSON.stringify({sequence: document.getElementById("sequence-selector").value})})
+            .then((response) => response.json())
+            .then((data) => {
+              button.classList.remove("sending");
+              button.innerText = data.error ? "Error" : "Success!";
+              if (data.error) console.log(data.error);
+
+              setTimeout(() => {
+                button.innerText = action.charAt(0).toUpperCase() + action.slice(1);
+              }, 3000);
+            })
+            .catch((error) => {
+              button.classList.remove("sending");
+              if (data.error) console.log(data.error);
+              setTimeout(() => {
+                button.innerText = action.charAt(0).toUpperCase() + action.slice(1);
+              }, 3000);
+            });}
+        else {
         fetch(`/api/${action}`, { method: "POST" })
           .then((response) => response.json())
           .then((data) => {
@@ -203,7 +225,7 @@
             setTimeout(() => {
               button.innerText = action.charAt(0).toUpperCase() + action.slice(1);
             }, 3000);
-          });
+          });}
       }
 
       // Fetch initial status on page load
@@ -250,7 +272,6 @@
 
       adjustButtonSize();
       fetchStatus(); // Fetch initial status on page load
-      fetchSequences();
 
       // Poll the status every second
       setInterval(fetchStatus, 1000);
@@ -267,6 +288,7 @@
       document.addEventListener("readystatechange", () => {
         if (document.readyState === "complete") {
           showReloadImage();
+          fetchSequences();
         }
       });
 
