--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -3,171 +3,16 @@
   <head>
     <title>FOLIOS Christmas Train Control Panel</title>
     <link href="./static/styles.css" rel="stylesheet" />
-    <style>
-      * {
-        font-family: "Poppins", sans-serif;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: "Poppins", sans-serif;
-        background-color: #000;
-        color: #ffffff;
-        margin: 0;
-        padding: 0;
-      }
-
-      #status-bar {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column; /* Stack items vertically */
-        padding: 5vh 2vw; /* Responsive padding based on viewport size */
-        background-color: #007bff; /* Status bar background color */
-      }
-
-      #status-text {
-        font-size: 6vw; /* Responsive font size based on viewport width */
-        font-weight: bold;
-        margin: 0;
-      }
-
-      #status-playing-text {
-        font-size: 2.5vw; /* Responsive font size based on viewport width */
-        font-weight: bold;
-        margin: 0;
-        display: none;
-      }
-
-      #status-info {
-        font-size: 3vw; /* Responsive font size based on viewport width */
-        display: flex;
-        flex-wrap: wrap;
-        gap: 20px;
-        margin-top: 20px; /* Add some space between Status bar and status info */
-      }
-
-      #status-info p {
-        margin: 0;
-      }
-
-      #sequence-container {
-        background-color: black;
-        padding: 1vh 2vw;
-        display: flex;
-        flex-direction: column; /* Stack items vertically */
-        align-items: flex-start; /* Align children to the left */
-      }
-
-      #sequence-selector-container {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-      }
-
-      #sequence-selector-container label {
-        font-size: 3vw; /* Responsive font size based on viewport width */
-        margin: 0;
-      }
-
-      #sequence-selector {
-        font-size: 2.5vw; /* Responsive font size based on viewport width */
-        flex: 1;
-        min-width: 30em; /* Set a minimum width for the selector */
-        padding: 1vh 2vw;
-        background-color: #333;
-        color: #fff;
-        border: none;
-      }
-
-      #controls {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr); /* Create a 2x2 grid */
-        gap: 10px;
-        padding: 0vh 1.5vw;
-        flex-direction: column; /* Make the buttons stack vertically */
-        flex-grow: 1; /* Make the controls container fill the remaining space */
-        height: fit-content;
-        padding-bottom: 2vh;
-      }
-
-      .control-button {
-        flex-grow: 1;
-        font-size: 8vw; /* Responsive font size based on viewport width */
-        background-color: #007bff;
-        color: #ffffff;
-        border: none;
-        padding: 2vh 4vw;
-        cursor: pointer;
-        width: 100%;
-        height: 100%;
-      }
-
-
-      .control-button-e {
-        flex-grow: 1;
-        font-size: 8vw; /* Responsive font size based on viewport width */
-        background-color: #007bff;
-        color: #ffffff;
-        border: none;
-        padding: 2vh 4vw;
-        cursor: pointer;
-        width: 100%;
-        height: 100%;
-      }
-
-      /* Status bar colors */
-      #status-bar.server-unreachable {
-        background-color: #dc3545;
-      }
-      #status-bar.not-connected {
-        background-color: #dc3545;
-      }
-      #status-bar.ready {
-        background-color: #ffc107;
-      }
-      #status-bar.playing {
-        background-color: #32d519;
-      }
-
-      /* Reload image */
-      .reload-image {
-        position: absolute;
-        top: 5px;
-        right: 5px;
-        width: 4vw;
-        height: 4vw;
-        opacity: 0;
-      }
-
-      /* Media queries for further responsiveness */
-      @media screen and (max-width: 768px) {
-        /* Adjust styles for smaller screens */
-        #status-text {
-          font-size: 8vw;
-        }
-
-        #sequence-selector {
-          font-size: 4vw;
-          min-width: 150px;
-          max-width: 80vw;
-        }
-
-        .control-button {
-          font-size: 5vw;
-          padding: 3vh 6vw;
-        }
-      }
-
-      /* Add more media queries as needed for additional breakpoints */
-    </style>
   </head>
   <body>
+    <div id="overlay"></div>
+
     <div id="status-bar" class="not-connected">
       <p id="status-text">Status: <span id="status">Not Connected</span></p>
       <p id="status-playing-text">Now Playing <span id="now-playing"></span></p>
       <img class="reload-image" src="/static/reload.png" alt="Reloading..." />
     </div>
+
     <div id="sequence-container">
       <div id="sequence-selector-container">
         <label for="sequence-selector">Sequence:</label>
@@ -176,23 +21,99 @@
         </form>
       </div>
     </div>
-    <div id="controls">
-      <button class="control-button play" onclick="sendRequest(this, 'play')" disabled>Play</button>
-      <button class="control-button stop" onclick="sendRequest(this, 'stop')" disabled>Stop</button>
-      <button class="control-button-e reload" onclick="() => {location.reload(); return false;}" disabled>Refresh</button>
-      <button class="control-button shutdown" onclick="handleShutdown(this)" disabled>Shutdown</button>
+
+    <div id="modal-overlay">
+      <div id="modal-container">
+        <p style="text-align: center; font-size: 3vh">Are you sure you want to power off all systems?</p>
+        <div style="display: flex; align-items: center; justify-content: center">
+          <button style="margin-right: 25px" class="button-hold cancel" id="cancel-button">
+            <div>
+              <svg class="icon" viewBox="0 0 16 16">
+                <path d="M9,11C9,10.447 8.553,10 8,10C7.447,10 7,10.447 7,11C7,11.553 7.447,12 8,12C8.553,12 9,11.553 9,11ZM9,4L9,9L7,9L7,4L9,4Z" />
+              </svg>
+              <svg class="progress" viewBox="0 0 32 32"></svg>
+              <svg class="tick" viewBox="0 0 24 24"></svg>
+            </div>
+            Cancel<br />🙉😬✋
+          </button>
+          <button class="button-hold-shutdown">
+            <div>
+              <svg class="icon" viewBox="0 0 16 16">
+                <polygon points="1.3,6.7 2.7,8.1 7,3.8 7,16 9,16 9,3.8 13.3,8.1 14.7,6.7 8,0"></polygon>
+              </svg>
+              <svg class="progress" viewBox="0 0 32 32">
+                <circle r="8" cx="16" cy="16" />
+              </svg>
+              <svg class="tick" viewBox="0 0 24 24">
+                <polyline points="18,7 11,16 6,12" />
+              </svg>
+            </div>
+            Proceed<br />🙀🙈🤞
+          </button>
+        </div>
+      </div>
     </div>
+
+    <div id="controls">
+      <button class="control-button play" onclick="sendRequest(this, 'play')" disabled="false">Play</button>
+      <button class="control-button stop" onclick="sendRequest(this, 'stop')" disabled="false">Stop</button>
+      <button class="control-button-e reload" onclick="window.location.reload();">Refresh</button>
+      <button id="power-button" class="control-button-e shutdown">Power Off</button>
+    </div>
+
     <script>
-      function handleShutdown(button) {
-        if (confirm("Are you sure you want to shut down?") == true) {
-          sendRequest(button, 'shutdown')
-        } else {
-          button.innerText = "Aborted."
-          setTimeout(() => {
-            button.innerText = "Shutdown";
-          }, 3000);
-        }
-      }
+      scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+      scrollLeft = window.pageXOffset || document.documentElement.scrollLeft;
+      window.onscroll = function () {
+        window.scrollTo(scrollLeft, scrollTop);
+      };
+
+      let duration = 2000,
+        success = (button) => {
+          //Success function
+          button.classList.add("success");
+          button.innerText = "Bye✌️";
+          sendRequest(document.getElementById("power-button"), "shutdown");
+        };
+
+      document.querySelectorAll(".button-hold-shutdown").forEach((button) => {
+        button.style.setProperty("--duration", duration + "ms");
+        ["mousedown", "touchstart", "keypress"].forEach((e) => {
+          button.addEventListener(e, (ev) => {
+            if (e != "keypress" || (e == "keypress" && ev.which == 32 && !button.classList.contains("process"))) {
+              button.classList.add("process");
+              button.timeout = setTimeout(success, duration, button);
+            }
+          });
+        });
+        ["mouseup", "mouseout", "touchend", "keyup"].forEach((e) => {
+          button.addEventListener(
+            e,
+            (ev) => {
+              if (e != "keyup" || (e == "keyup" && ev.which == 32)) {
+                button.classList.remove("process");
+                clearTimeout(button.timeout);
+              }
+            },
+            false
+          );
+        });
+      });
+
+      const blurButton = document.getElementById("power-button");
+      const cancelButton = document.getElementById("cancel-button");
+      const overlay = document.getElementById("overlay");
+      const modalContainer = document.getElementById("modal-container");
+
+      blurButton.addEventListener("click", () => {
+        overlay.style.display = "block";
+        modalContainer.style.display = "block";
+      });
+
+      cancelButton.addEventListener("click", () => {
+        overlay.style.display = "none";
+        modalContainer.style.display = "none";
+      });
 
       let prevStatus = "";
       function fetchSequences() {
@@ -266,7 +187,7 @@
           })
           .catch((error) => {
             console.error("Error fetching status:", error);
-            updateStatus({status: "Server Unreachable"});
+            updateStatus({ status: "Server Unreachable" });
           })
           .finally(() => {
             showReloadImage();
@@ -285,34 +206,34 @@
         if ((prevStatus == "Server Unreachable" || prevStatus == "Not Connected") && (status == "Ready" || status == "Playing")) {
           fetchSequences();
         }
-        prevStatus = status
+        prevStatus = status;
         statusElement.innerText = status;
-        statusBar.style.padding = "5vh 2vw"
-        statusPlayingElement.style.display = "none"
+        statusBar.style.padding = "5vh 2vw";
+        statusPlayingElement.style.display = "none";
         playingElement.style.display = "none";
         statusBar.className = "";
         if (status == "Server Unreachable") {
           statusBar.classList.add("server-unreachable");
-          buttons.forEach((button) => button.setAttribute("disabled", "disabled"));
+          buttons.forEach((button) => button.setAttribute("disabled", "true"));
           selector.setAttribute("disabled", "disabled");
         } else if (status == "Not Connected") {
           statusBar.classList.add("not-connected");
-          buttons.forEach((button) => button.setAttribute("disabled", "disabled"));
+          buttons.forEach((button) => button.setAttribute("disabled", "true"));
           selector.setAttribute("disabled", "disabled");
         } else {
           if (status == "Ready") {
             statusBar.classList.add("ready");
           } else {
             statusBar.classList.add("playing");
-            statusBar.style.padding = "1.5vh 2vw"
-            statusPlayingElement.style.display = "block"
-            playingElement.style.display = "inline-block"
-            playingElement.innerHTML = sequence
+            statusBar.style.padding = "1.5vh 2vw";
+            statusPlayingElement.style.display = "block";
+            playingElement.style.display = "inline-block";
+            playingElement.innerHTML = sequence;
           }
           buttons.forEach((button) => button.removeAttribute("disabled"));
           selector.removeAttribute("disabled");
         }
-        adjustButtonSize()
+        adjustButtonSize();
       }
 
       adjustButtonSize();
@@ -334,7 +255,7 @@
         if (document.readyState === "complete") {
           showReloadImage();
           fetchSequences();
-          adjustButtonSize()
+          adjustButtonSize();
         }
       });
 
